# OpenSequencer

./: CMakeLists.txt  LICENSE  README.md
hardware/: Sekoencer.csv  Sekoencer.kicad_prl  Sekoencer.kicad_pro  Sekoencer.kicad_sch  Sekoencer.xml  buttons.kicad_sch  cv_inputs.kicad_sch  leds.kicad_sch  trigger_output.kicad_sch  uart_midi.kicad_sch
include/: bootsel-reboot.hpp  midi.h  tables.h
src/: bootsel-reboot.cpp  main.cpp  midi.cpp  usb_descriptors.c
